# turreta-alerts

./: .gitignore  LICENSE  README.md  docs.odt
backend/: .env  .env.example  Cargo.toml  diagrams.odg  diesel.toml
backend/migrations/2023-05-20-070051_create_alerts_table/: up.sql
backend/schemas/: schema.rs
backend/src/: main.rs
backend/src/controllers/: alerts_controller.rs  alerts_dtos.rs  mod.rs
backend/src/domains/: alert.rs
backend/src/middlewares/: mod.rs  preprocessor.rs
backend/src/models/: alert.rs
backend/src/repository/: database.rs
backend/src/services/: alert_service.rs  keycloak_service.rs  mod.rs
backend/src/utils/: common_utils.rs  mod.rs
docker/dev/: docker-compose.yml
