[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.28"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
turreta-rust-keycloak = { version = "1.0.0", git = "https://github.com/turretadotcom/turreta-rust-keycloak", branch="master" }
#async-trait = "0.1.68"